Fixed z-index issue

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header {
 /* to prevent menu from pushing down nearby content */
 .button-set {
   position: absolute;
+  z-index: 2;
 }
 
 button {
